--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@devias-kit-pro/nextjs-template",
-  "author": "Devias IO",
+  "name": "elmam",
+  "author": "Elmam",
   "version": "7.2.1",
   "private": true,
   "scripts": {
@@ -86,12 +86,15 @@
     "@types/react-syntax-highlighter": "15.5.13",
     "@typescript-eslint/parser": "8.10.0",
     "@vercel/style-guide": "6.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "9.1.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.6.3"
   }
 }
