--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NEXT_PUBLIC_SITE_VERSION=
 NEXT_PUBLIC_LOG_LEVEL=
 
 # Backend
-API_URL=http://127.0.0.1:4000/api/v1
+NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:4000/api/v1
 ## Auth
 NEXT_PUBLIC_AUTH_STRATEGY=CUSTOM
 
