--- a/.env
+++ b/.env
@@ -10,14 +10,14 @@ NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:4000/api/v1
 ## Auth
 NEXT_PUBLIC_AUTH_STRATEGY=CUSTOM
 
-
 # Firebase
-NEXT_PUBLIC_FIREBASE_API_KEY=
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyApfO_i17ZvbDlCDa-hNaTtpaF_fTrSiFI"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="elmam-2024.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="elmam-2024"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="elmam-2024.firebasestorage.app"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="460103726318"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:460103726318:web:28f038d7e7475e05d0afff"
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-22V43917ZR"
 
-# Google Tag Manager 
+# Google Tag Manager
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=
