--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "embla-carousel-react": "8.3.0",
     "firebase": "10.14.1",
     "i18next": "23.16.2",
+    "jwt-decode": "^4.0.0",
     "mapbox-gl": "3.7.0",
     "next": "14.2.15",
     "next-i18next": "15.3.1",
@@ -66,6 +67,7 @@
     "react-i18next": "15.1.0",
     "react-map-gl": "7.1.7",
     "react-markdown": "9.0.1",
+    "react-query": "^3.39.3",
     "react-simple-maps": "3.0.0",
     "react-syntax-highlighter": "15.6.1",
     "recharts": "2.13.0",
