parse workers file logic to use it in nationality reports

--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "embla-carousel": "8.3.0",
     "embla-carousel-react": "8.3.0",
     "firebase": "10.14.1",
+    "html2canvas": "^1.4.1",
     "i18next": "23.16.2",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "mapbox-gl": "3.7.0",
     "next": "14.2.15",
@@ -74,6 +76,7 @@
     "sonner": "1.5.0",
     "stylis": "4.3.4",
     "stylis-plugin-rtl": "2.1.1",
+    "xlsx": "^0.18.5",
     "zod": "3.23.8"
   },
   "devDependencies": {
